--- a/index.html
+++ b/index.html
@@ -288,60 +288,40 @@
                                                     d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
                                             </svg>
                                         </span>
-                                        <span class="nav-link-title"> Finamcial Institutions </span>
+                                        <span class="nav-link-title"> Financial Institutions </span>
                                     </a>
                                     <div class="dropdown-menu">
                                         <div class="dropdown-menu-columns">
                                             <div class="dropdown-menu-column">
-                                                <a class="dropdown-item" href="./empty.html"> Empty page </a>
-                                                <a class="dropdown-item" href="./cookie-banner.html"> Cookie banner </a>
-                                                <a class="dropdown-item" href="./activity.html"> Activity </a>
-                                                <a class="dropdown-item" href="./gallery.html"> Gallery </a>
-                                                <a class="dropdown-item" href="./invoice.html"> Invoice </a>
-                                                <a class="dropdown-item" href="./search-results.html"> Search results </a>
-                                                <a class="dropdown-item" href="./pricing.html"> Pricing cards </a>
-                                                <a class="dropdown-item" href="./pricing-table.html"> Pricing table </a>
-                                                <a class="dropdown-item" href="./faq.html"> FAQ </a>
-                                                <a class="dropdown-item" href="./users.html"> Users </a>
-                                                <a class="dropdown-item" href="./license.html"> License </a>
-                                            </div>
-                                            <div class="dropdown-menu-column">
-                                                <a class="dropdown-item" href="./logs.html"> Logs </a>
-                                                <a class="dropdown-item" href="./music.html"> Music </a>
-                                                <a class="dropdown-item" href="./photogrid.html"> Photogrid </a>
-                                                <a class="dropdown-item" href="./tasks.html"> Tasks </a>
-                                                <a class="dropdown-item" href="./uptime.html"> Uptime monitor </a>
-                                                <a class="dropdown-item" href="./widgets.html"> Widgets </a>
-                                                <a class="dropdown-item" href="./wizard.html"> Wizard </a>
-                                                <a class="dropdown-item" href="./settings.html"> Settings </a>
-                                                <a class="dropdown-item" href="./trial-ended.html"> Trial ended </a>
-                                                <a class="dropdown-item" href="./job-listing.html"> Job listing </a>
-                                                <a class="dropdown-item" href="./page-loader.html"> Page loader </a>
+                                                <a class="dropdown-item" href="#">Banks</a>
+                                                <a class="dropdown-item" href="#">Microfinance</a>
+                                                <a class="dropdown-item" href="#"> Bank Agents </a>
+                                                <a class="dropdown-item" href="#"> Gallery </a>
                                             </div>
                                         </div>
                                     </div>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./icons.html">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link" href="#">
                                         <span
-                                            class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/ghost -->
+                                            class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/lifebuoy -->
                                             <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
                                                 stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
                                                 stroke-linejoin="round">
                                                 <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                                <path
-                                                    d="M5 11a7 7 0 0 1 14 0v7a1.78 1.78 0 0 1 -3.1 1.4a1.65 1.65 0 0 0 -2.6 0a1.65 1.65 0 0 1 -2.6 0a1.65 1.65 0 0 0 -2.6 0a1.78 1.78 0 0 1 -3.1 -1.4v-7" />
-                                                <path d="M10 10l.01 0" />
-                                                <path d="M14 10l.01 0" />
-                                                <path d="M10 14a3.5 3.5 0 0 0 4 0" />
+                                                <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+                                                <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+                                                <path d="M15 15l3.35 3.35" />
+                                                <path d="M9 15l-3.35 3.35" />
+                                                <path d="M5.65 5.65l3.35 3.35" />
+                                                <path d="M18.35 5.65l-3.35 3.35" />
                                             </svg>
                                         </span>
-                                        <span class="nav-link-title"> Loans Management</span>
+                                        <span class="nav-link-title"> Loans Management </span>
                                     </a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#navbar-help" data-bs-toggle="dropdown"
-                                        data-bs-auto-close="outside" role="button" aria-expanded="false">
+                                    <a class="nav-link" href="#">
                                         <span
                                             class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/lifebuoy -->
                                             <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
@@ -358,22 +338,6 @@
                                         </span>
                                         <span class="nav-link-title"> Configurations </span>
                                     </a>
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="https://tabler.io/docs" target="_blank" rel="noopener"> Documentation
-                                        </a>
-                                        <a class="dropdown-item" href="./changelog.html"> Changelog </a>
-                                        <a class="dropdown-item" href="https://github.com/tabler/tabler" target="_blank" rel="noopener">
-                                            Source code </a>
-                                        <a class="dropdown-item text-pink" href="https://github.com/sponsors/codecalm" target="_blank"
-                                            rel="noopener">
-                                            <!-- Download SVG icon from http://tabler-icons.io/i/heart -->
-                                            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-inline me-1" width="24" height="24"
-                                                viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                                                stroke-linecap="round" stroke-linejoin="round">
-                                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                                                <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" />
-                                            </svg> Sponsor project! </a>
-                                    </div>
                                 </li>
                             </ul>
                         </div>
