--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                         <div class="col">
                             <!-- Page pre-title -->
                             <div class="page-title">Welcome Kilimo Mkopo</div>
-                            <h2 class="page-pretitle">Hello 👋 Said Minda, Welcome Back</h2>
+                            <h2 class="page-pretitle">Hello 👋 Kasobo Kihuna, Welcome Back</h2>
                         </div>
                         <!-- Page title actions -->
                     </div>
