add loans management

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                                     </div>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link" href="#">
+                                    <a class="nav-link" href="loans-managment.html">
                                         <span
                                             class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/lifebuoy -->
                                             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -507,7 +507,7 @@
                                                 </td>
                                                 <td> 15 Dec 2017 </td>
                                                 <td>100,887</td>
-                                                <td class="d-flex align-items-center">
+                                                <td class="d-flex align-items-center" style="margin-top: 5px;">
                                                     <div class="progress progress-xs">
                                                         <div class="progress-bar bg-success" style="width: 100%"></div>
                                                     </div><span class="p-2" style="font-size: 12px;">89%</span>
@@ -532,7 +532,7 @@
                                                 </td>
                                                 <td> 15 Dec 2017 </td>
                                                 <td>100,887</td>
-                                                <td class="d-flex align-items-center">
+                                                <td class="d-flex align-items-center" style="margin-top: 5px;">
                                                     <div class="progress progress-xs">
                                                         <div class="progress-bar bg-primary" style="width: 71.0%"></div>
                                                     </div><span class="p-2" style="font-size: 12px;">89%</span>
@@ -557,7 +557,7 @@
                                                 </td>
                                                 <td> 15 Dec 2017 </td>
                                                 <td>100,887</td>
-                                                <td class="d-flex align-items-center">
+                                                <td class="d-flex align-items-center" style="margin-top: 5px;">
                                                     <div class="progress progress-xs">
                                                         <div class="progress-bar bg-primary" style="width: 71.0%"></div>
                                                     </div><span class="p-2" style="font-size: 12px;">89%</span>
@@ -582,7 +582,7 @@
                                                 </td>
                                                 <td> 15 Dec 2017 </td>
                                                 <td>100,887</td>
-                                                <td class="d-flex align-items-center">
+                                                <td class="d-flex align-items-center" style="margin-top: 5px;">
                                                     <div class="progress progress-xs">
                                                         <div class="progress-bar bg-primary" style="width: 90%"></div>
                                                     </div><span class="p-2" style="font-size: 12px;">89%</span>
@@ -607,7 +607,7 @@
                                                 </td>
                                                 <td> 15 Dec 2017 </td>
                                                 <td>100,887</td>
-                                                <td class="d-flex align-items-center">
+                                                <td class="d-flex align-items-center" style="margin-top: 5px;">
                                                     <div class="progress progress-xs">
                                                         <div class="progress-bar bg-primary" style="width: 71.0%"></div>
                                                     </div><span class="p-2" style="font-size: 12px;">89%</span>
@@ -632,7 +632,7 @@
                                                 </td>
                                                 <td> 15 Dec 2017 </td>
                                                 <td>100,887</td>
-                                                <td class="d-flex align-items-center">
+                                                <td class="d-flex align-items-center" style="margin-top: 5px;">
                                                     <div class="progress progress-xs">
                                                         <div class="progress-bar bg-secondary" style="width: 42%"></div>
                                                     </div><span class="p-2" style="font-size: 12px;">89%</span>
@@ -657,7 +657,7 @@
                                                 </td>
                                                 <td> 15 Dec 2017 </td>
                                                 <td>100,887</td>
-                                                <td class="d-flex align-items-center">
+                                                <td class="d-flex align-items-center" style="margin-top: 5px;">
                                                     <div class="progress progress-xs">
                                                         <div class="progress-bar bg-danger" style="width: 15.5%"></div>
                                                     </div><span class="p-2" style="font-size: 12px;">89%</span>
@@ -682,7 +682,7 @@
                                                 </td>
                                                 <td> 15 Dec 2017 </td>
                                                 <td>100,887</td>
-                                                <td class="d-flex align-items-center">
+                                                <td class="d-flex align-items-center" style="margin-top: 5px;">
                                                     <div class="progress progress-xs">
                                                         <div class="progress-bar bg-success" style="width: 100%"></div>
                                                     </div><span class="p-2" style="font-size: 12px;">89%</span>
