--- a/sign-in.html
+++ b/sign-in.html
@@ -13,24 +13,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Sign in - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
+  <title>Kilimo Mkopo - Sign in</title>
   <!-- CSS files -->
   <link href="./dist/css/tabler.min.css?1684106062" rel="stylesheet" />
   <link href="./dist/css/tabler-flags.min.css?1684106062" rel="stylesheet" />
   <link href="./dist/css/tabler-payments.min.css?1684106062" rel="stylesheet" />
   <link href="./dist/css/tabler-vendors.min.css?1684106062" rel="stylesheet" />
   <link href="./dist/css/demo.min.css?1684106062" rel="stylesheet" />
-  <style>
-    @import url('https://rsms.me/inter/inter.css');
-
-    :root {
-      --tblr-font-sans-serif: 'Inter Var', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-    }
-
-    body {
-      font-feature-settings: "cv03", "cv04", "cv11";
-    }
-  </style>
 </head>
 
 <body class=" d-flex flex-column">
